--- a/style.css
+++ b/style.css
@@ -1,17 +1,40 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Yanone+Kaffeesatz:wght@400;700&display=swap");
 
+html
+{
+  min-height: 100vh;
+}
+
 body
 {
   background-color: #C8E2ED;
-  display: block;
+  display: inline-block;
   font-family: "Roboto", sans-serif;
 
-  height: 100%;
+  min-height: 100vh;
 }
+
+/* headers */
 
 h1, h2, h3, h4, h5, h6
 {
   font-family: "Yanone Kaffeesatz", sans-serif;
+}
+
+h1
+{
+  font-size: 4em;
+  margin-top: 0.1675em;
+  margin-bottom: 0.1675em;
+}
+
+.subtitle
+{
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-size: 1.75em;
+
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 /* navigation */
@@ -19,14 +42,15 @@ h1, h2, h3, h4, h5, h6
 nav
 {
   background-color: darkgrey;
-  border-right: 2px solid white;
+  border-right: 5px solid white;
   text-align: center;
 
-  position: absolute;
+  position: fixed;
   display: block;
   width: 10%;
-  height: 100%;
+  height: auto;
   padding: 5px;
+  overflow: hidden;
 
   top: 0;
   bottom: 0;
@@ -43,7 +67,7 @@ nav *
 .navheader
 {
   font-family: "Yanone Kaffeesatz", sans-serif;
-  font-size: 48px;
+  font-size: 3em;
 
   /*margin-left: auto;
   margin-right: auto;*/
@@ -53,4 +77,31 @@ nav *
 #logo
 {
   border-radius: 500px;
+}
+
+/* image showcase */
+.imageshowcase
+{
+  border: 3px solid black;
+  display: inline-block;
+
+  max-width: 75%;
+  height: auto;
+}
+
+.imageshowcase img
+{
+  max-width: 49%;
+  height: auto;
+}
+
+/* main content */
+main
+{
+  display: inline;
+
+  position: absolute;
+  left: 12%;
+  width: auto;
+  height: 100%;
 }
